# e2e-test-20260129-114341

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
.research/results/comparative-1-mistral-7b-instruct-v0.2-gsm8k/: candidates_k2_max64.jsonl
.research/results/proposed-mistral-7b-instruct-v0.2-gsm8k/: candidates_k10_max256.jsonl  candidates_k10_max320.jsonl
config/: config.yaml
config/runs/: comparative-1-mistral-7b-instruct-v0.2-gsm8k.yaml  proposed-mistral-7b-instruct-v0.2-gsm8k.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
